Update reference to picture to include extension

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagne</h1>
-    <img src="../images/lasagne" alt="Lasagne" height="400">
+    <img src="../images/lasagne.jpg" alt="Lasagne" height="400">
     <h3>Description</h3>
     <p>
         One day, not having any gluten-free pasta on hand but lots of zucchini, I decided to use 'zoodles' instead of noodles.
