Add links to the two new recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagne</a>
+    <ul>
+        <li>
+            <a href="./recipes/lasagna.html">Lasagne</a>
+        </li>
+        <li>
+            <a href="./recipes/toad-in-the-hole.html">Toad in the Hole</a>
+        </li>
+        <li>
+            <a href="./recipes/bangers-and-mash.html">Bangers and Mash</a>
+        </li>
+    </ul>
 </body>
 </html>
