Add a link back to the homepage on each recipe page

--- a/recipes/bangers-and-mash.html
+++ b/recipes/bangers-and-mash.html
@@ -34,5 +34,6 @@
         <li>Heat the gravy in a pan over medium heat.</li>
         <li>To serve, scoop the potatoes onto a large serving plate. Arrange the sausages over the potatoes, top with the onions, drizzle with gravy, and sprinkle with oregano.</li>
     </ol>
+    <a href="../index.html">⬅Home</a>
 </body>
 </html>
