--- a/recipes/toad-in-the-hole.html
+++ b/recipes/toad-in-the-hole.html
@@ -55,5 +55,6 @@
         <li>When timer goes off, remove toad in the hole from the oven; it should be browned and puffed. Spoon gravy over the sausages and garnish with green onions and chives.</li>
         <li>Serve with extra gravy.</li>
     </ol>
+    <a href="../index.html">⬅Home</a>
 </body>
 </html>
