--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,5 +31,6 @@
         <li>Top with a thin layer of mozzarella, 1/3 of the bechamel (see Editor's Note), 1/3 of remaining tomato sauce, 1/3 of the Parmigiano Reggiano cheese, and 1/3 of the basil. Repeat layers, topping with bechamel and Parmigiano Reggiano cheese.</li>
         <li>Bake in the preheated oven until sauce is bubbly and the top is golden brown, about 35 minutes. Allow to set until remaining liquid is absorbed, about 10 minutes.</li>
     </ol>
+    <a href="../index.html">⬅Home</a>
 </body>
 </html>
