Add basic CSS to each page

--- a/recipes/toad-in-the-hole.html
+++ b/recipes/toad-in-the-hole.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Toad in the Hole</title>
 </head>
 <body>
-    <h1>Toad in the Hole</h1>
+    <h1 class="title">Toad in the Hole</h1>
     <img src="../images/toad.jpg" alt="Toad in the Hole" height="400">
     <h3>Description</h3>
     <p>
