--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="title">Odin Recipes</h1>
+    <ul class="recipe-list">
         <li>
             <a href="./recipes/lasagna.html">Lasagne</a>
         </li>
